--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "toastr.js",
   "dependencies": {
+    "codecov": "^1.0.1",
     "gulp": "^3.9.1",
     "typescript": "^1.8.9"
   },
