--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "typescript": "^1.8.9"
   },
   "devDependencies": {
+    "coveralls": "^2.11.9",
     "gulp": "^3.9.1",
     "gulp-connect": "^3.2.0",
     "mocha": "^2.4.5",
+    "mocha-lcov-reporter": "^1.2.0",
     "mocha-phantomjs": "^4.0.2",
     "tsc": "^1.20150623.0",
     "web-animations-js": "^2.1.4"
