--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "devDependencies": {
     "coveralls": "^2.11.9",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-connect": "^3.2.0",
+    "gulp-less": "^3.0.5",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-util": "^3.0.7",
     "mocha": "^2.4.5",
     "mocha-lcov-reporter": "^1.2.0",
     "mocha-phantomjs": "^4.0.2",
